--- a/app/views/wellcome/index.html.erb
+++ b/app/views/wellcome/index.html.erb
@@ -1,5 +1,6 @@
 <div class="main-model">
 	<h1>Well come </h1>
 </div>
-
-<%= link_to 'Register New User', new_user_path, class: 'button button3' %>
+<div class="btn-center">
+	<%= link_to 'Register New User', new_user_path, class: 'button button3' %>
+</div>
